Fix overflow on search

--- a/Website/style.css
+++ b/Website/style.css
@@ -205,6 +205,7 @@ publication{
     margin: 10px 10px;
     padding: 15px 20px;
     position: relative;
+    flex-shrink: 0;
 }
 
 publication::after{
@@ -347,7 +348,7 @@ popup popup-window popup-content input, select {
 #newMangaResult {
   display: none;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 5px auto 0;
   border-radius: 5px;
   padding: 5px;
@@ -355,6 +356,7 @@ popup popup-window popup-content input, select {
   max-width: 98%;
   max-height: 400px;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 blur-background {
